--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,37 @@
 asgiref==3.8.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 Django==4.2
 django-bootstrap5==23.4
+geckodriver==0.0.1
+get-gecko-driver==1.3.13
+h11==0.14.0
+idna==3.7
+markdown-it-py==3.0.0
+mdurl==0.1.2
+outcome==1.3.0.post0
 pillow==10.2.0
+pycparser==2.22
+Pygments==2.17.2
+PySocks==1.7.1
+requests==2.31.0
+rich==13.7.1
+selenium==4.19.0
+shellingham==1.5.4
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
 sqlparse==0.4.4
+trio==0.25.0
+trio-websocket==0.11.1
+typer==0.12.3
+typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
+wsproto==1.2.0
