--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,9 @@ env.bak/
 venv.bak/
 /djvenv
 
+# Chrome
+DynamoApp/DynamoApp/tests/chrome-win64
+
 # Spyder project settings
 .spyderproject
 .spyproject
