--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.4.4
+stripe==9.2.0
 trio==0.25.0
 trio-websocket==0.11.1
 typer==0.12.3
