--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,10 +23,17 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: 3.11
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+      
     - name: Generate Report
       run: |
         pip install django coverage
         coverage run manage.py test
+        
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
